<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F2F2F2"
    android:orientation="vertical"
    android:padding="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/editar_servicio"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editServicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/servicio"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/descripcion"
        android:importantForAutofill="no"
        android:textColor="#050000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/costo"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editCosto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="number"
            android:hint="@string/_0"
            android:importantForAutofill="no"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/actualizar"
        android:textColor="#FFFFFF"
        app:backgroundTint="#6872A6" />


</LinearLayout>