<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F2F2F2"
    android:orientation="vertical"
    android:padding="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/editar_cita"
        android:textColor="@color/white"
        android:background="@color/moradonazul"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/nombre"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/servicio"
        android:textColor="#050000"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editfecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:enabled="false"
            android:hint="@string/fecha"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/editbtnfecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fecha"
            android:textColor="#FFFFFF"
            app:backgroundTint="#D9725B" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edithora"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:enabled="false"
            android:hint="@string/hora"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/editbtnhora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hora"
            android:textColor="#FFFFFF"
            app:backgroundTint="#D9725B" />
    </LinearLayout>


    <EditText
        android:id="@+id/editcosto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/total"
        android:importantForAutofill="no"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/forma_de_pago"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/editrg2_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb2_tarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="90dp"
            android:button="@drawable/radioboton_custome"
            android:text="@string/tarjeta" />

        <RadioButton
            android:id="@+id/rb2_efectivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radioboton_custome"
            android:text="@string/efectivo" />
    </RadioGroup>


    <Button
        android:id="@+id/btnedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/actualizar"
        android:textColor="#FFFFFF"
        app:backgroundTint="#6872A6" />


</LinearLayout>