<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/moradonazul"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/servicio"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvdescrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/descripcion"
            android:textColorLink="#89CFF0"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/costo"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/ivEdit"
                android:layout_width="193dp"
                android:layout_height="40dp"
                android:contentDescription="@string/icono_editar"
                android:src="@drawable/edit" />

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="@string/icono_borrar"
                android:src="@drawable/delete" />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>