<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2D90A6"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvcita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cita"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvnombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Nombre" />

        <TextView
            android:id="@+id/tvservicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Servicio" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvfecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="110dp"
                android:layout_marginRight="110dp"
                android:text="Fecha" />

            <TextView
                android:id="@+id/tvhora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hora" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/hr"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/totals"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvfpago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forma_de_pago" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivEdit"
                android:layout_width="193dp"
                android:layout_height="40dp"
                android:contentDescription="@string/icono_editar"
                android:src="@drawable/edit" />

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="@string/icono_borrar"
                android:src="@drawable/delete" />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>